webtree/themes/main/css/collapse_files/responsive.css
/* theming */

/* Dean's font size */
html{
	font-family: Arial, Helvetica, sans-serif;
	/*
	font-size: 100%;
	font-style: normal;
	font-weight: 400;
	*/
	line-height: 1.406;	
}



body{
	width:		100%;
}


/* Dean's font size 
p {
      font-size: 0.95em;
      text-align: justify;
}
*/

#site-title{
	max-height:	25%;	
	max-width:	50%;
}

#site-title img{
	width:		100%;
}

#secondary-branding{
	height:		25%;	
	max-width:	50%;
}

#secondary-branding img{
	width:		100%;
	width: 		auto\9; /* ie8 */
	max-width:	100%;
}

.theme-title-row-collapsed{
	display:	none;
    overflow:	hidden;
}

.theme-title-row-expanded{
	display:	block;
}

#mobile_shares{
	margin-bottom:	12px;	
	display:		none;
}

.comments-collapsed{
	display:	none;
}

.comments-full{
	margin-top:	2em;
}

#standard_shares a.addthis_button_facebook_like{
	text-align:	left !important;
}


/* PDF VIEWER HEIGHTS FOR IPAD */
.pdf-viewer{
	overflow:hidden;		
}

#docview{
	height:600px;
}

@media only screen and (max-width: 1280px) and (orientation: landscape){
	#docview, .pdf-viewer{
		height:		600px;
	}

}

@media only screen and (max-width: 1280px) and (orientation: portrait){
	#docview, .pdf-viewer{
		height:		400px;
	}
	.addthis_counter{
		display:none!important;

	}
}



@media only screen and (max-width: 767px) {
	.theme-title-row-collapsed{
		display:	block;
		max-width:	100%;
	}
	.theme-title-row-expanded{
		display:	none;
	}
	.comments-full{
		display:	none;
	}
	.comments-collapsed{
		display:	block;
	}
	
	#mobile_shares{
		display:	block;
		margin-top:	1em;
	}
	#standard_shares{
		display:	none;
	}

	.addthis_32x32_style > a{
		margin-left:	5px;
		margin-right:	5px;
	}
	
}


#content{
	clear:		both;
	padding:	0 !important;
}

#container{
    display:	table;
    width:		100%;
}

.left-text .theme-item-wrapper h6{
	margin-left: 0.75em;
}

.right-text .theme-item-wrapper h6{
	margin-right: 0.75em;	
}

.theme-item-wrapper {
	display:		inline-block;
	vertical-align:	middle;
	margin-bottom:	0.75em
}

.theme-item-wrapper h6{
	display:	inline;
}

.left-text {
	text-align:		left;
}

.right-text {
	text-align:		right;
}

.center-text {
	text-align:		center;
}



/* ----- horizontal centering utility ----- */

.theme-center-outer{
	max-width: 100% !important;
	overflow:	hidden;
}

.theme-center-middle{
	max-width: 	100% !important;
	position:	relative;
	left:		50%;
	float:		left;
}

.theme-center-inner{
	max-width: 100% !important;
	position:	relative;
	right:		50%;
	float:		left;
}

.theme-center-inner a img{
	max-width:	100%;
}
            	
/* ----- exhibition top page ----- */

.tmp-img{
	visibility: hidden;	
}

.single-item .tmp-img{
	visibility: visible;	
}

#media_wrapper{
	width:	auto;
	height: auto;
	max-width:100%;
}

.single-item #zoomit_window{
	border:	none;	
}


div.metadata-rights{
	position:relative;
	float:left;clear:both;
}

div.metadata-rights table{
	padding:0px;
	background:transparent;
	margin-bottom:0px;
}

div.metadata-rights td, div.metadata-rights p{
	padding:0px;
	margin-bottom:0px;
}

div.metadata-rights a img{
	margin-top:1em;
}


.wiki-citation{
	clear:			both;	
}

#embedded{	
	padding-top:	1em;
	clear:			both;
	width:			100%;
}

#embedded textarea{
	width:			100%;
}


#embedded span{
	font-weight:		bold;
}
	
.theme-title{
    text-align:	center;
}




.theme-item{
    position:	relative;
}


/* ----- browse items ----- */

.browsed-item-wrapper{
	text-align:center;
}


/* ----- end browse items ----- */



/* ----- header & logos ----- */


@media only screen and (min-width: 480px) and (max-width: 767px) {
    #site-title{
	    max-width: 15%;
    }
    #secondary-branding{
	    zzzmax-width: 15%;
	    max-width: 8%;
    }
}

#site-title-small{
	display:		none;
	xxxxposition:		relative;
	xxxtop:			-2%;
	float:			left;
	margin-right:	5px;
	width:    		13%;
	
}

#site-title{
	float:left;
}

#site-title-small a img{
	xwidth:    50px;
	display:	inline;
	max-height:	100%;	
	max-width:	100%;
}


@media all and (max-width: 320px) {

	#site-title-small{
		display:		block;
		top:			0px;
		margin-right:	5px;
		margin-top:		2px;
		height:    		100%;
		min-width:    	15%;
	}
	
	#site-title-small a img{
		max-height:	100%;	
		max-width:	100%;
	}
	
	#main-breadcrumbs{
		overflow:	hidden;
	}
	
	h1{
		font-size:	1.2em;
	}	
}

@media all and (max-width: 480px) {
	
	#site-title-small{
		display:		block;
	}
	#header{
		display:		none;
	}
	
	#top-navigation{
		margin-bottom:	0;
	}
	
	/*
	#main-breadcrumbs{
		xxbackground-color: orange;
	}
	*/
	
	#site-title-small{
		top:			4px;
		margin-right:	5px;
		xxxxxxxxxxxxxxxxxwidth:				9%;
		overflow:hidden;
		padding-top: 4px;
	}
	
	#site-title-small a img{
		max-height:	95%;	
		max-width:	95%;
	}
	
	
}


#top-navigation{
	margin-bottom:	1.75em;
}

ul.navigation{
	text-align:	left;
}
/* ----- end of header & logos ----- */


input[type="text"], input[type="password"], input[type="email"], textarea, select{
	background:		none repeat scroll 0 0 #FFFFFF;
	border:			1px solid #CCCCCC;
	border-radius:	2px 2px 2px 2px !important;
	color:			#777777;
	display:		block;
	font:			13px "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
	margin:			0 0 20px;
	max-width:		100%;
	outline:		medium none;
}

/* ----- landing page(s) ----- */

/* zoomit not visible while offline - use border for now */
#in-focus{
	xxxborder:		1px solid #C6C6C6 !important;
}


#in-focus img{
    max-width:    100%    !important;
}



#in-focus{
	max-width:    100%    !important;
}

.pdf-viewer{
	max-width: 	100%    !important;
	width:    	100%    !important;
}



#zoomit_window, #media_wrapper{
	max-width:100%;
}

/* these 2 are to stop the right-hand border from disappearing on the story page */
#media_wrapper{
	position:	relative;
	left:		-1px;
}

/* forces zoomit dimensions but loses centering..... */
/*
#in-focus, #__seadragon1, .theme-center-inner, .theme-center-middle{
	width:    100%    !important;
}
*/



table{
	table-layout: fixed;
}



#exhibit-item-infocus-item{
	position:	relative;
}
			
#tbl-exhibit-item{
	border-collapse:	collapse;
}

#tbl-exhibit-item, #tbl-exhibit-item tr{
	width:				100%;
	background-color:	transparent;
}

#tbl-exhibit-item tbody tr td{
	vertical-align:		middle !important;
	padding:			0px !important;
	background-color:	transparent;
}

#tbl-exhibit-item tbody tr td.content{
	width:		auto;
	max-width:	100% !important;
}
			
#tbl-exhibit-item tbody tr td.navigate{
	display:	none;
	width:		30px;
}			

#exhibit-section-title-small{
	text-align:	center;
	margin-top:	1.5em;
	display:	none;
}

#exhibit-section-title{
	display:block;
}

#exhibit-item-thumbnails{
	margin-bottom:	2em;
}

.exhibit-page-nav{
	white-space:nowrap;
}
.widget{
	white-space:nowrap;
}
					
@media only screen and (max-width: 767px){
	#tbl-exhibit-item tbody tr td.navigate{
		display:	table-cell;
	}
	.exhibit-page-nav{
		display:	none;
	}
	#exhibit-section-title-small{
		display:	block;
	}
	#exhibit-section-title{
		display:	none;
	}
	#exhibit-item-thumbnails{
		margin-bottom:	0em;
	}
}


@media only screen and (max-width: 320px){
	#main-breadcrumbs{
		font-size: 0.4em;
		height: 15px;
		line-height: 15px;
	}
	
	#top-navigation a:link, #top-navigation a:visited{
		font-weight:	normal;
	}
	
	#top-navigation a{
		xdisplay: block;
	}
}



#exhibit-item-thumbnails .exhibit-item {
	display: inline;
	float:left;	
}

#exhibit-item-thumbnails img{
	max-width:	100%;
}


#exhibit-item-title-only{
	/* Andy removed this because long titles were overflowing: but why was this put in the first place? */
	/* white-space:	nowrap; */
}


/* ----- end of landing page(s) ----- */


.credits-img{
	width:100%;
	max-width:100%;
	height: auto;
	display:block;
	margin:auto;		
}

.credits-embed{
	margin-bottom:	2em;
}


/* ----- collapsible footer -----*/

#bottom-navigation{
	padding-top:	0.6em;
}

.wrap_at_320{
	float:			left;
	margin-right:	2em;
	padding-top:	0.3em;
	padding-bottom:	0.3em;
}

@media only screen and (max-width: 767px) {
	.wrap_at_320{
		display:	block;
		clear:		both;
		float:		none;
		text-align:	center;
	}
	
}

